Refactor structure and BuildProject startup logic